--- a/web-devlopment-learning/01_HTML (Hyper Text Markup Language)/02_Basic Structure of HTML/index.html
+++ b/web-devlopment-learning/01_HTML (Hyper Text Markup Language)/02_Basic Structure of HTML/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Website</title>
+    <meta name="description" content="">
+    <title>Basic Structure of HTML</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my First Website</h1>
+    content
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
